--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
+
     </dependencies>
 </project>
